# meSMiLEseq

./: .gitignore  LICENSE  README.md
Motifs/psam/: AHCTF1_bindingmode_1.csv  AKNA_bindingmode_1.csv  CAMTA1_DBD_bindingmode_1.csv  CAMTA2_bindingmode_1.csv  CASZ1_bindingmode_1.csv  CGGBP1_bindingmode_1.csv  CSRNP1_bindingmode_1.csv  CSRNP2_bindingmode_1.csv  CXXC4_FL_bindingmode_1.csv  DMTF1_bindingmode_1.csv  FAM200B_DBD_bindingmode_1.csv  FBXL19_bindingmode_1.csv  FIZ1_bindingmode_1.csv  JAZF1_bindingmode_1.csv  KDM2A_bindingmode_1.csv  MBD1_DBD_bindingmode_1.csv  MECP2_bindingmode_1.csv  MKX_bindingmode_1.csv  MSANTD1_FL_bindingmode_1.csv  MSANTD4_bindingmode_1.csv  NACC2_bindingmode_1.csv  NANOGNB_bindingmode_1.csv  POGK_bindingmode_1.csv  POU5F1_FL_bindingmode_1.csv  PRDM10_DBD_bindingmode_1.csv  PRDM13_DBD_bindingmode_1.csv  PRDM5_DBD_bindingmode_1.csv  PURB_bindingmode_1.csv  RFX5_FL_bindingmode_1.csv  RLF_bindingmode_1.csv  SETBP1_bindingmode_1.csv  SP100_bindingmode_1.csv  SP140L_bindingmode_1.csv  SP140_bindingmode_1.csv  TET2_FL_bindingmode_1.csv  TIGD3_bindingmode_1.csv  TIGD4_bindingmode_1.csv  TIGD5_DBD_bindingmode_1.csv  TIGD7_bindingmode_1.csv  TIGD7_bindingmode_2.csv  (+60 more)
SMiLEseq/scripts/: 00_readin_data.py  01_fishers_exact_test.py  (+3 more)
WGBS_analysis/: Figure5_example.ipynb  PRDM13_DBD_bindingmode_1.csv
probound_operator/: .gitignore  create_package.sh  pyproject.toml
probound_operator/pyProBound_operator/: __init__.py  input_config_preparation.py  input_data_preparation.py  other_method_config_preparation.py  output_analysis.py  training.py
(+59 files in other folders)
